--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -11,22 +11,11 @@ $accent-dark: #585858;
 // FONT SIZES
 
 //mobile
-$header: 14.75vw;
-
-$subheader-big: 4rem;
+$header: 14.5vw;
 $subheader: 3rem;
 $subheader-small: 2rem;
-
 $text: 1.5rem;
 $text-small: 1rem;
 
 //desktop
-$des-header: 6rem;
-$des-subheader: 3rem;
-$des-subheader-small: 2rem;
-$des-text: 1rem;
-
-// QUERIES 
-
-$tablet: 550px;
-$desktop: 1000px;
+$des-header: 12.75vw;
