--- a/styles/layouts/about.scss
+++ b/styles/layouts/about.scss
@@ -4,26 +4,34 @@
     display: grid;
     gap: 4rem;
 
+    .about_heading {
+        display: grid;
+        gap: 4rem;
+    }
+
     .about_wrapper {
         margin: auto;
         opacity: 0;
         scale: 0.8;
-        width: 250px;
+        width: 200px;
         height: 30px;
         overflow: hidden;
 
         transition: height 1400ms;
 
         img {
-            width: 100%;
-            height: 100%;
             object-fit: cover;
             scale: 1.2;
         }
     }
 
+    .about_heading_text_wrapper {
+        display: grid;
+        gap: 4rem;
+    }
+
     .about_wrapper.visible {
-        height: 300px;
+        height: 250px;
         animation: load 700ms forwards;
     }
 
@@ -50,6 +58,73 @@
                 width: 12px;
                 height: 12px;
             }
+        }
+    }
+}
+
+@media (width > 700px) {
+    #about {
+        .about_wrapper {
+            width: 250px;
+            height: 30px;
+        }
+
+        .about_wrapper.visible {
+            height: 300px;
+        }
+    }
+}
+
+@media (width > 1000px) {
+
+    #about {
+        h3 {
+            font-size: min(9vw, 7rem);
+        }
+
+        h4 {
+            font-size: $subheader;
+        }
+
+        p {
+            font-size: $subheader-small;
+
+            a {
+                font-size: $subheader-small;
+
+                svg {
+                    width: 22px;
+                    height: 22px;
+                }
+            }
+        }
+
+        .about_wrapper {
+            width: 225px;
+            height: 30px;
+        }
+
+        .about_wrapper.visible {
+            height: 375px;
+        }
+    }
+
+    .about_heading {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+
+@media (width > 1200px) {
+    #about {
+
+        .about_wrapper {
+            width: 300px;
+            height: 30px;
+        }
+
+        .about_wrapper.visible {
+            height: 375px;
         }
     }
 }
