--- a/styles/layouts/contact.scss
+++ b/styles/layouts/contact.scss
@@ -4,9 +4,20 @@
     display: grid;
     gap: 4rem;
 
+    padding-bottom: 4rem;
+
     h3 {
         font-size: $subheader-small;
         text-align: right;
+
+        opacity: 0;
+        transform: translate(-10px);
+        transition: transform 700ms, opacity 700ms;
+    }
+
+    h3.visible {
+        opacity: 1;
+        transform: translate(0);
     }
 
     p {
@@ -39,10 +50,36 @@
 .contact_content {
     display: grid;
     gap: 2rem;
+    text-transform: uppercase;
+}
+
+@media (width > 500px) {
+    #contact {
+
+        .contact_mail {
+            display: flex;
+            gap: 1rem;
+        }
+
+        p {
+            font-size: $text;
+        }
+
+        a {
+            font-size: $text;
+
+            svg {
+                height: 18px;
+                width: 18px;
+            }
+        }
+    }
 }
 
 @media (width > 1000px) {
     #contact {
+        gap: 8rem;
+
         h3 {
             font-size: $subheader;
         }
