--- a/styles/layouts/hero.scss
+++ b/styles/layouts/hero.scss
@@ -3,7 +3,7 @@
 #hero {
     position: relative;
     display: grid;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr;
     height: calc(100vh - 4rem);
     padding-top: 4rem;
 
@@ -32,7 +32,7 @@
 
     p {
         text-align: right;
-        font-size: max(1rem, 6vw);
+        font-size: min(3rem, 7vw);
 
         transform: translate(-20px);
         opacity: 0;
@@ -63,6 +63,7 @@
     margin-bottom: 1rem;
 
     p {
+        font-size: $text-small;
         text-align: left;
         opacity: 0;
 
@@ -79,12 +80,27 @@
     }
 }
 
+@media (width > 500px) {
+    .hero_info {
+        p {
+            font-size: $text;
+        }
+
+        .anchor {
+            font-size: $subheader-small;
+        }
+    }
+}
+
 @media (width > 1000px) {
     #hero {
-        grid-template-rows: 1fr 3fr 3fr;
+        height: calc(100vh - 2rem);
     }
 
     .hero_clock {
+        display: flex;
+        gap: 2rem;
+        justify-content: center;
 
         p {
             font-size: $text;
@@ -94,8 +110,8 @@
     .hero_title {
 
         h1 {
-            height: min($des-header, 11rem);
-            font-size: min($des-header, 11rem);
+            height: 7rem;
+            font-size: 7rem;
         }
 
         p {
